--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,9 +13,15 @@ jobs:
     steps:
       - name: Checkout the Repository
         uses: actions/checkout@v3
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
 
-      - name: Setup pnpm
-        run: npm install -g pnpm
+      # - name: Setup pnpm
+      #   run: npm install -g pnpm
+
+      - name: Generate prisma client
+        run: npm run db:generate
         
       - name: Install Dependencies
         run: pnpm install
