--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
     "start-user-app": "cd ./apps/user-app && npm run start"
   },
   "devDependencies": {
+    "@repo/db": "*",
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "prettier": "^3.2.5",
-    "turbo": "latest",
-    "@repo/db": "*"
+    "turbo": "latest"
   },
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "npm@10.2.4",
+  "packageManager": "npm@10.9.0",
   "workspaces": [
     "apps/*",
     "packages/*"
   ],
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "docker": "^1.0.0",
     "express": "^4.19.2",
     "recoil": "^0.7.7",
     "typescript": "^5.5.4"
